Removed menu entry and fixed a number of formatting issues + typo

--- a/docs/de-de/modules/webshop/pages/shop-builder.adoc
+++ b/docs/de-de/modules/webshop/pages/shop-builder.adoc
@@ -134,11 +134,11 @@ Oberkategorie im ShopBuilder erstellen:
 |Namen der Kategorie eingeben.
 
 | *URL-Name* (Pflichtfeld)
-|URL-Namen der Kategorie eingeben. Aus dem Namen wird die *URL* generiert. Jede Kategorie benötigt eine einzigartige URL.
+|URL-Namen der Kategorie eingeben. Aus dem Namen wird die *URL* generiert. Jede Kategorie benötigt eine einzigartige URL. +
 
 *_Wichtig_*:
 
-* Der URL-Name darf nicht aus reinen Zahlenkombinationen bestehen.
+* Der URL-Name darf nicht aus reinen Zahlenkombinationen bestehen. +
 * Der URL-Name darf keine Sonderzeichen enthalten. Daher ausschließlich ASCII-Code verwenden.
 * Folgende Zeichenfolgen dürfen zu Beginn eines URL-Namens nicht verwendet werden: +
 a-, b-, c-, f-, fa-, p-, t- +
@@ -258,12 +258,13 @@ Pro Kategorie kann nur ein Inhalt gleichzeitig aktiv sein.
 [TIP]
 .Content-Typen
 ====
-Beim Erstellen von neuen Inhalten für **Content**-Kategorien kannst du aus 3 verschiedenen Typen wählen:
+Beim Erstellen von neuen Inhalten für **Content**-Kategorien kannst du aus 4 verschiedenen Typen wählen:
 - Inhalte vom Typ *Content* verwendest du für die Startseite und statische Seiten, wie die Firmengeschichte oder deine Versandkosteninformationen.
 - Inhalte vom Typ *Checkout* verwendest du für die Kaufabwicklung.
 - Inhalte vom Typ *Mein Konto* verwendest du für den Kund:innenbereich in deinem Webshop.
+- Inhalte vom Typ *Softlogin* verwendest du, um Bestellbestätigungsseiten für Gastbstellungen zugänglich zu machen.
 
-Beim Erstellen von neuen Inhalten für **Artiekel**-Kategorien kannst du aus den folgenden Typen wählen:
+Beim Erstellen von neuen Inhalten für **Artikel**-Kategorien kannst du aus den folgenden Typen wählen:
 
 - Inhalte vom Type *Artikelansicht* verwendest du für die Darstellung individueller Artikel.
 - Inhalte vom Typ *Kategorieansicht* verwendest du für die Darstellung von Artikelkategorien.
