--- a/docs/en-gb/modules/online-store/pages/shop-builder.adoc
+++ b/docs/en-gb/modules/online-store/pages/shop-builder.adoc
@@ -23,7 +23,7 @@ ShopBuilder consists of 2 user interfaces: the content manager and the editor. T
 
 To access all of ShopBuilder’s features, you require the following user rights:
 
-:rights-purpose: Edit ShopBuilder settings and pages
+:rights-purpose: edit ShopBuilder settings and pages
 
 :right-one: pass:quotes[*CMS*]
 :right-two: pass:quotes[*Plugins*]
@@ -89,7 +89,7 @@ The category tree contains 2 buttons: The green button **New category** at the l
 [#create-category]
 ==== Create new main category
 
-You can create main and subcategories directly in ShopBuilder. Note that some category settings (e.g. tags) are not available in ShopBuilder. You can find additional information in the xref:item:categories.adoc#700[category] chapter. Proceed as described below to create a new main category. Pay attention to the explanations given in <<tabelle-kategorie-bearbeiten>>.
+You can create main and subcategories directly in ShopBuilder. Note that some category settings (e.g. tags) are not available in ShopBuilder. You can find additional information in the xref:item:categories.adoc#700[category] chapter. Proceed as described below to create a new main category. Pay attention to the explanations given in <<table-edit-category>>.
 
 [.instruction]
 Creating main categories in ShopBuilder:
@@ -104,7 +104,7 @@ Creating main categories in ShopBuilder:
 . Enter a **URL name**.
 . *Save* (icon:save[role="green"]) the settings. +
 → The new category has been added to the category tree.
-. Carry out additional settings as desired. Pay attention to the explanations given in <<tabelle-kategorie-bearbeiten>>.
+. Carry out additional settings as desired. Pay attention to the explanations given in <<table-edit-category>>.
 . *Save* (icon:save[role="green"]) the settings.
 
 [[table-edit-category]]
@@ -134,15 +134,17 @@ Creating main categories in ShopBuilder:
 |Enter a name for the category.
 
 | *URL name* (mandatory)
-|Enter a URL name for the category. The category’s *URL* is derived from this name. Every category requires a unique URL.
+|Enter a URL name for the category. The category’s *URL* is derived from this name. Every category requires a unique URL. +
 
-*_Important_*:
+*_Important_*: +
 
-* URL names cannot consist only of numbers.
-* URL names cannot contain special characters. As such, only enter ASCII code.
+* URL names cannot consist only of numbers. +
+* URL names cannot contain special characters. As such, only enter ASCII code. +
 * Do not enter the following characters at the beginning of a URL name: +
 a-, b-, c-, f-, fa-, p-, t- +
-These prefixes are deleted automatically. For instance, "a-class" is changed to "class" automatically. For example, for a category named "a-class", you should enter the URL name "aclass".
+These prefixes are deleted automatically.
+For instance, "a-class" is changed to "class" automatically.
+For example, for a category named "a-class", you should enter the URL name "aclass".
 
 | *Canonical*
 |If necessary, enter the URL of a category with the same content to prevent duplicate content.
