--- a/docs/en-gb/modules/markets/pages/best-practices-amazon-mfn-order-import.adoc
+++ b/docs/en-gb/modules/markets/pages/best-practices-amazon-mfn-order-import.adoc
@@ -31,6 +31,8 @@ Check whether the token has expired by viewing the developer permissions in your
 
 You can update the Auth token via this link:https://sellercentral.amazon.de/apps/manage[link^]. (The expiry date is set in the future. This ensures that the permissions are valid again.)
 
+*_Tip:_* You can also update the Auth token in the *Amazon - Base settings* assistant in the *Setup » Assistants » Omni-Channel* menu. To do so, click on *Allow access* in the step *Allow access to Amazon* of the assistant. You are then forwarded to Amazon and have to login with your Amazon access data. On the Amazon page, click on *Confirm* to generate a new authentication token.
+
 [#300]
 == Wrong access data
 
