Franz/fix anchors and typos (#883)
* Removed menu entry and fixed a number of formatting issues + typo

* FIX: A number of anchors, a few typos

* Number of Vale-powered corrections.

--- a/docs/de-de/modules/webshop/pages/ceres-einrichten.adoc
+++ b/docs/de-de/modules/webshop/pages/ceres-einrichten.adoc
@@ -247,9 +247,11 @@ Mit dem ShopBuilder kannst du die Startseite deines plentyShops mit wenigen Hand
 Informationen zur Einrichtung des ShopBuilders findest du auf der ShopBuilder xref:webshop:shop-builder.adoc#shopbuilder-intro[Handbuchseite].
 
 [#header]
-=== Einstellungen für den Header vornehmen
+=== Header-Einstellungen vornehmen
 
-Hier nimmst du Einstellungen vor, die den Header deines plentyShops betreffen. Der Header ist der obere Bereich einer Seite. Du kannst für jede Seite einen individuellen Header mit dem ShopBuilder xref:webshop:shop-builder.adoc#shopbuilder-intro[ShopBuilder] erstellen.
+Hier nimmst du Einstellungen vor, die den Header deines plentyShops betreffen. 
+Der Header ist der obere Bereich einer Seite. 
+Du kannst für jede Seite einen individuellen Header mit dem ShopBuilder xref:webshop:shop-builder.adoc#shopbuilder-intro[ShopBuilder] erstellen.
 
 [[tabelle-header-einstellungen]]
 .Header-Einstellungen vornehmen
@@ -1374,7 +1376,25 @@ Gehe xref:artikel:checkliste-artikel-anzeige.adoc#[diese Checkliste] Schritt fü
 .*Wie bediene ich den ShopBuilder und was kann ich damit machen?*
 --
 
-In unserem link:https://www.youtube.com/watch?v=s_9DCTlF_qg[Livestream^] am 17.04.2020 haben wir euch das Arbeiten mit dem ShopBuilder vom ersten Schritt bis zum fertigen, voll funktionstüchtigen plentyShop vorgestellt. Zudem zeigt der Live-Mitschnitt viele neue Funktionen von Ceres 5, wie beispielsweise Artikelsets und neue Widgets für die Suche. Wenn du nicht weißt, wo du anfangen sollst, dann ist dieser Live-Mitschnitt das Richtige für dich!
+In unserem link:https://www.youtube.com/watch?v=s_9DCTlF_qg[Livestream^] am 17. April 2020 haben wir euch das Arbeiten mit dem ShopBuilder vom ersten Schritt bis zum fertigen, voll funktionstüchtigen plentyShop vorgestellt. Außerdem zeigt der Live-Mitschnitt viele neue Funktionen von plentyShop LTS, wie beispielsweise Artikelsets und neue Widgets für die Suche. Der Live-Mitschnitt ist ein toller Einstiegspunkt für plentyShop-Neulinge.
+
+--
+
+[.collapseBox]
+.*Wie tausche ich das Firmenlogo aus?*
+--
+
+Du kannst das Firmenlogo im Header deines plentyShops austauschen. 
+Öffne das Menü _CMS » ShopBuilder_.
+Wähle eine Kategorie im Kategoriebaum auf der linken Seite aus.
+Öffne einen Inhalt im Bereich **Header-Inhalte**, indem du darauf klickst.
+Öffne die Widget-Einstellungen des Widgets **Kategorienavigation**.
+In der Einstellung *Firmenlogo* kannst du eine Bilddatei für dein Logo hochladen.
+Klicke auf *Datei wählen*, um eine Bilddatei aus dem Webspace zu wählen oder eine neue Bilddatei hochzuladen.
+Klicke im Menü *Meine Dateien* auf die Zeile der Bilddatei, die du als Logo auswählen möchtest.
+Klicke auf die *Wählen*-Schaltfläche. +
++
+Achte auf die Sichtbarkeit des Headers. Je nachdem, wie viele unterschiedliche Header du im Einsatz hast,  musst du das Firmenlogo in mehr als einem Header-Inhalt austauschen.
 
 --
 
