Changed a bunch of stuff in order to adhere to the style guide.

--- a/docs/de-de/modules/webshop/pages/shop-builder.adoc
+++ b/docs/de-de/modules/webshop/pages/shop-builder.adoc
@@ -259,17 +259,18 @@ Pro Kategorie kann nur ein Inhalt gleichzeitig aktiv sein.
 .Content-Typen
 ====
 Beim Erstellen von neuen Inhalten für **Content**-Kategorien kannst du aus 4 verschiedenen Typen wählen:
+
 - Inhalte vom Typ *Content* verwendest du für die Startseite und statische Seiten, wie die Firmengeschichte oder deine Versandkosteninformationen.
 - Inhalte vom Typ *Checkout* verwendest du für die Kaufabwicklung.
 - Inhalte vom Typ *Mein Konto* verwendest du für den Kund:innenbereich in deinem Webshop.
-- Inhalte vom Typ *Softlogin* verwendest du, um Bestellbestätigungsseiten für Gastbstellungen zugänglich zu machen.
+- Inhalte vom Typ *Softlogin* verwendest du, um den Zugang Bestellbestätigungsseiten für Gastbestellungen zu ermöglichen.
 
 Beim Erstellen von neuen Inhalten für **Artikel**-Kategorien kannst du aus den folgenden Typen wählen:
 
 - Inhalte vom Type *Artikelansicht* verwendest du für die Darstellung individueller Artikel.
 - Inhalte vom Typ *Kategorieansicht* verwendest du für die Darstellung von Artikelkategorien.
 - Inhalte vom Typ *Artikelsuchergebnis* verwendest du für die Seite, die angezeigt wird, nachdem Kund:innen eine Suche abschicken.
-- Imhalte vom Typ *Artikelset* verwendest du für xref:artikel:multipacks-pakete-sets.adoc#3000[Sets], die verschiedene Artikel beinhalten.
+- Inhalte vom Typ *Artikelset* verwendest du für xref:artikel:multipacks-pakete-sets.adoc#3000[Sets], die verschiedene Artikel beinhalten.
 ====
 
 [.instruction]
@@ -526,10 +527,11 @@ Dieses Widget stellt eine Breadcrumb-Navigation zur Verfügung, die deinen Kund:
 [#kategorie-navigation]
 ==== Kategorienavigation
 
-Dieses Widget stellt eine Kategorienavigation zur Verfügung. Klicke auf icon:cog[role="darkGrey"] *Einstellungen*, um die Widget-Einstellungen zu öffnen. +
+Dieses Widget stellt eine Kategorienavigation für den Header zur Verfügung. 
+Klicke auf icon:cog[role="darkGrey"] *Einstellungen*, um die Widget-Einstellungen zu öffnen. +
 
 [[tabelle-kategorie-navigation]]
-.Einstellungen Kategorie-Navigation
+.Einstellungen Kategorienavigation
 [cols="1,3"]
 |====
 |Einstellung |Erläuterung
@@ -547,7 +549,7 @@ Dieses Widget stellt eine Kategorienavigation zur Verfügung. Klicke auf icon:co
 |Anzahl der Kategorien eingeben, die in der jeweiligen Ebene des Mega-Menüs angezeigt werden. Diese Einstellung ist nur wirksam, wenn *Mega-Menü* als *Stil der Kategorienavigation* gewählt wurde.
 
 | *Firmenlogo*
-|Bilddatei auswählen, welche als Firmenlogo links oben im Shop angezeigt werden soll. Die gängigen Bildformate (PNG, JPG, etc.) sind zulässig.
+|Bilddatei wählen, die als Firmenlogo links oben im Shop angezeigt werden soll. Die gängigen Bildformate (PNG, JPG, etc.) sind zulässig.
 
 |====
 
@@ -612,7 +614,7 @@ Dieses Widget erkennt die Browsersprache deiner Nutzer:innen und bietet ihnen ei
 |Einstellung |Erläuterung
 
 | **CSS-Klasse**
-|Hinterlege in diesem Feld zusätzliche CSS-Klassen, um das Widget individuell zu stylen. Du kannst beliebig viele CSS-Klassen hinterlegen.
+|Speichere in diesem Feld zusätzliche CSS-Klassen, um das Widget individuell zu stylen. Du kannst beliebig viele CSS-Klassen speichere.
 
 | *Erscheinungsbild*
 |Farbgebung aus der Dropdown-Liste wählen. Diese bestimmt die Farbe der Tabs im Widget. Du legst die Farboptionen im Menü <<#design, Design>> fest.
@@ -631,20 +633,20 @@ Dieses Widget erkennt die Browsersprache deiner Nutzer:innen und bietet ihnen ei
 [#struktur-widgets]
 === Struktur
 
-Struktur-Widgets sind dazu da, das Layout deiner Seite zu strukturieren. Sie haben keinen eigenen Inhalt, sondern werden mit anderen Widgets befüllt. Struktur-Widgets können auch mit anderen Struktur-Widgets befüllt werden, um eine Vielzahl an unterschiedlichen Layout-Optionen zu ermöglichen.
+Struktur-Widgets sind dazu da, das Layout deiner Seite zu strukturieren. Struktur-Widgets haben keinen eigenen Inhalt, sondern werden mit anderen Widgets befüllt. Struktur-Widgets können auch mit anderen Struktur-Widgets befüllt werden, um eine Vielzahl an unterschiedlichen Layout-Optionen zu ermöglichen.
 
 [#raster-4]
-==== Raster mit 4 Spalten
+==== Raster (4 Spalten)
 
 Dieses Widget stellt ein Strukturelement mit 4 Spalten zur Verfügung. Die 4 Spalten werden nebeneinander standardmäßig im Verhältnis 1:1:1:1 dargestellt. Dieses Widget hat keine weiteren Einstellungen.
 
 [#raster-3]
-==== Raster mit 3 Spalten
+==== Raster (3 Spalten)
 
 Dieses Widget stellt ein Strukturelement mit 3 Spalten zur Verfügung. Die 3 Spalten werden standardmäßig nebeneinander im Verhältnis 1:1:1:1 dargestellt. Klicke auf icon:cog[role="darkGrey"] *Einstellungen*, um die Widget-Einstellungen zu öffnen.
 
 [[tabelle-3-raster]]
-.Einstellungen Raster mit 3 Spalten
+.Einstellungen Raster (3 Spalten)
 [cols="1,3"]
 |====
 |Einstellung |Erläuterung
@@ -662,12 +664,12 @@ Dieses Widget stellt ein Strukturelement mit 3 Spalten zur Verfügung. Die 3 Spa
 |====
 
 [#raster-2]
-==== Raster mit 2 Spalten
+==== Raster (2 Spalten)
 
 Dieses Widget stellt ein Strukturelement mit 2 Spalten zur Verfügung. Die 2 Spalten werden standardmäßig nebeneinander im Verhältnis 1:1 dargestellt. Klicke auf icon:cog[role="darkGrey"] *Einstellungen*, um die Widget-Einstellungen zu öffnen.
 
 [[tabelle-2-raster]]
-.Einstellungen Raster mit 2 Spalten
+.Einstellungen Raster (2 Spalten)
 [cols="1,3"]
 |====
 |Einstellung |Erläuterung
@@ -743,7 +745,10 @@ Dieses Widget stellt ein Strukturelement zur Verfügung, mit dem man andere Widg
 [#weitere-informationen]
 ==== Weitere Informationen
 
-Mit dem Weitere Informationen-Widget bindest du eine Schaltfläche ein, die ein Pop-Up öffnet, in dem du zusätzliche Inhalte darstellen kannst. Durch Klick auf auf die Schaltfläche öffnet sich ein editierbarer Bereich, in dem du andere Widgets platzieren kannst. Klicke auf icon:cog[role="darkGrey"] *Einstellungen*, um die *Widget-Einstellungen* zu öffnen. +
+Mit dem Weitere Informationen-Widget bindest du eine Schaltfläche ein, die ein Pop-Up-Fenster öffnet. 
+In diesem Pop-Up kannst du zusätzliche Inhalte darstellen. 
+Durch Klick auf die Schaltfläche öffnet sich ein editierbarer Bereich, in dem du Widgets platzieren kannst. 
+Klicke auf icon:cog[role="darkGrey"] *Einstellungen*, um die *Widget-Einstellungen* zu öffnen. +
 
 [[tabelle-information]]
 .Einstellungen Weitere Informationen
@@ -752,7 +757,7 @@ Mit dem Weitere Informationen-Widget bindest du eine Schaltfläche ein, die ein 
 |Einstellung |Erläuterung
 
 | **CSS-Klasse**
-|Hinterlege in diesem Feld zusätzliche CSS-Klassen, um das Widget individuell zu stylen. Du kannst beliebig viele CSS-Klassen hinterlegen.
+|Speichere in diesem Feld zusätzliche CSS-Klassen, um das Widget individuell zu stylen. Du kannst beliebig viele CSS-Klassen speichern.
 
 | *Erscheinungsbild*
 |Farbgebung aus der Dropdown-Liste wählen. Diese bestimmt die Farbe der Tabs im Widget. Du legst die Farboptionen im Menü <<#design, Design>> fest.
@@ -990,7 +995,7 @@ Dieses Widget stellt ein Bilderkarussell zur Verfügung. Klicke auf icon:cog[rol
 *Varianten-ID* = Gib die ID der Variante ein, auf die das Bild verlinken soll. Das Artikelbild wird angezeigt. +
 
 | *In neuem Tab öffnen*
-|Aktivieren, um beim Klick auf eine Slide des Bilderkarussells einen neuen Browser-Tab mit dem angegebenen Linkziel zu öffnen. Diese Einstellung greift nur, wenn ein Linkziel unter angegeben wurde.
+|Aktivieren, um beim Klick auf eine Slide des Bilderkarussells einen neuen Browser-Tab mit dem angegebenen Linkziel zu öffnen. Diese Einstellung greift nur, wenn ein Linkziel unter *Quelle* angegeben wurde.
 
 | *Bildauswahl*
 |Bilddatei aus deinem Webspace wählen. Mit der Bildauswahl überschreibst du das Kategoriebild oder Variantenbild und kannst so Bilder im Karussell anzeigen, die du nicht für Artikel oder Kategorien verwendest. Du benutzt die *Bildauswahl* auch, um ein Bild für eine *Datei (Webspace)* oder einen *externen Link* zu speichern.
@@ -1075,7 +1080,7 @@ Dieses Widget stellt eine Bilderbox zur Verfügung, in der du Bilder speichern k
 |Einstellung |Erläuterung
 
 | **CSS-Klasse**
-|Hinterlege in diesem Feld zusätzliche CSS-Klassen, um das Widget individuell zu stylen. Du kannst beliebig viele CSS-Klassen hinterlegen.
+|Speichere in diesem Feld zusätzliche CSS-Klassen, um das Widget individuell zu stylen. Du kannst beliebig viele CSS-Klassen speichern.
 
 | *Volle Bildschirmbreite*
 |Hake diese Option an, um das Hintergrundbild, unabhängig von der Größe des Bildes, auf die Größe des jeweiligen Endgeräte-Bildschirms zu skalieren.
@@ -1087,7 +1092,7 @@ Dieses Widget stellt eine Bilderbox zur Verfügung, in der du Bilder speichern k
 |Hake diese Option an, um das Hintergrundbild zu fixieren. Ist diese Option inaktiv, scrollt das Hintergrundbild mit.
 
 |*Farbe*
-|Farbgebung aus der Dropdown-Liste wählen. Die Farbe wird als Hintergrund verwendet, falls kein Bild für das Hintergrundbild-Widget ausgewählt ist oder füllt das Hintergrundbild-Widget aus, falls das ausgewählte Bild kleiner als der Widget-Container ist. Du legst die verfügbaren Farboptionen im Menü <<#design, Design>> fest.
+|Farbgebung aus der Dropdown-Liste wählen. Falls kein Bild für das Hintergrundbild-Widget ausgewählt ist, wird diese Farbe als Hintergrund verwendet. Falls das ausgewählte Bild kleiner als der Widget-Container ist, wird der Rest des Hintergrundbild-Widgets mit der ausgewählten Farbe ausgefüllt. Du legst die verfügbaren Farboptionen im Menü <<#design, Design>> fest.
 
 |*Hintergrundbild*
 |Wähle aus, welches Bild als Hintergrundbild verwendet werden soll. bei der Option *Ohne* wird nur die ausgewählte *Farbe* angezeigt. Die Optionen *Kategoriebild 1* und *Kategoriebild 2* zeigen das jeweilige, an der Kategorie hinterlegte Kategoriebild an. Wählst du die Option *Eigenes Bild*, wird eine Bildauswahl eingeblendet, über die du eine Bilddatei hochladen kannst.
@@ -1135,7 +1140,7 @@ Um Tag-Weiterleitungen im Frontend zu ermöglichen, muss die Route **/tags** in 
 |Einstellung |Erläuterung
 
 | **CSS-Klasse**
-|Hinterlege in diesem Feld zusätzliche CSS-Klassen, um das Widget individuell zu stylen. Du kannst beliebig viele CSS-Klassen hinterlegen.
+|Speichere in diesem Feld zusätzliche CSS-Klassen, um das Widget individuell zu stylen. Du kannst beliebig viele CSS-Klassen speichern.
 
 | **Tag-Darstellung**
 |Wähle, ob deine Tags in der Form **Standard** oder **Abgerundet** dargestellt werden sollen.
@@ -1161,13 +1166,12 @@ Dieses Widget stellt die Auswahl von Attributen auf der Artikelseite zur Verfüg
 |Farbgebung aus der Dropdown-Liste wählen. Diese bestimmt die Farbe des Widgets. Du legst die verfügbaren Farboptionen im Menü <<#design, Design>> fest.
 
 | *Auswahl des Inhalts immer anzeigen*
-|Aktivieren, um den Inhalt der Variante immer verfügbar zu machen. Ist diese Option deaktiviert, wird der Inhalt nur angezeigt, wenn dieser zur Unterscheidung der Varianten dient.
+|Aktivieren, um die Inhaltsauswahl der Variante immer anzuzeigen. Wenn diese Option deaktiviert ist, wird der Inhalt nur angezeigt, wenn dieser zur Unterscheidung der Varianten dient.
 
 | *Außenabstand ändern*
 |Aktivieren, um weitere Formatierungsoptionen einzublenden. Dir stehen separate Optionen für alle <<#abstaende, Seitenabstände>> des Widgets zur Verfügung.
 
 |====
-
 
 ==== In den Warenkorb
 
@@ -1311,7 +1315,7 @@ Dieses Widget stellt den Preis des Artikels dar. Falls vorhanden werden auch *In
 |Einstellung |Erläuterung
 
 | *Streichpreis anzeigen*
-|Aktivieren, um den durchgestrichenen UVP über dem Artikelpreis anzuzeigen. Hierfür muss neben dem UVP noch mindestens ein weiterer Preis vom Typ *Aktionspreis* angelegt sein.
+|Aktivieren, um den durchgestrichenen UVP über dem Artikelpreis anzuzeigen. Hierfür muss neben dem UVP noch ein weiterer Preis vom Typ *Aktionspreis* angelegt sein.
 
 | *Erscheinungsbild*
 |Farbgebung aus der Dropdown-Liste wählen. Diese bestimmt die Farbe des Widgets. Du legst die verfügbaren Farboptionen im Menü <<#design, Design>> fest.
@@ -1511,7 +1515,10 @@ Dieses Widget stellt die Adressauswahl zur Verfügung, um Kund:innen die Möglic
 |Farbgebung aus der Dropdown-Liste wählen. Diese bestimmt die Farbe der *Neue Adresse*-Schaltfläche. Du legst die verfügbaren Farboptionen im Menü <<#design, Design>> fest.
 
 | *Vorausgewählte Anrede*
-|Auswählen, welche Option in der Dropdown-Liste *Anrede* vorausgewählt sein soll. Als Anrede für *diverse* Geschlechteroptionen kannst du *Person* wählen; als Anrede für B2B-Kund:innen, kannst du *Firma* vorauswählen. Im Menü *CMS » Mehrsprachigkeit* kannst du die betreffenden Einträge anpassen.
+|Auswählen, welche Option in der Dropdown-Liste *Anrede* vorausgewählt sein soll. 
+Als Anrede für *diverse* Geschlechteroptionen kannst du *Person* wählen. 
+Als Anrede für B2B-Kund:innen kannst du *Firma* vorauswählen. 
+Im Menü *CMS » Mehrsprachigkeit* kannst du die betreffenden Einträge anpassen.
 
 | *Adresstyp*
 |Rechnungs- oder Lieferadresse wählen.
@@ -1664,7 +1671,7 @@ Dieses Widget stellt eine Auflistung deiner Kontaktdaten zur Verfügung, einschl
 |Einstellung |Erläuterung
 
 | **CSS-Klasse**
-|Hinterlege in diesem Feld zusätzliche CSS-Klassen, um das Widget individuell zu stylen. Du kannst beliebig viele CSS-Klassen hinterlegen.
+|Speichere in diesem Feld zusätzliche CSS-Klassen, um das Widget individuell zu stylen. Du kannst beliebig viele CSS-Klassen speichern.
 
 | *Erscheinungsbild*
 |Farbgebung aus der Dropdown-Liste wählen. Diese bestimmt die Farbe des Widgets. Du legst die verfügbaren Farboptionen im Menü <<#design, Design>> fest.
@@ -1997,7 +2004,7 @@ Das Auftragsdaten-Widget zeigt deinen Kund:innen eine Übersicht über ihre Date
 |Einstellung |Erläuterung
 
 | **CSS-Klasse**
-|Hinterlege in diesem Feld zusätzliche CSS-Klassen, um das Widget individuell zu stylen. Du kannst beliebig viele CSS-Klassen hinterlegen.
+|Speichere in diesem Feld zusätzliche CSS-Klassen, um das Widget individuell zu stylen. Du kannst beliebig viele CSS-Klassen speichern.
 
 | *Erscheinungsbild*
 |Farbgebung aus der Dropdown-Liste wählen. Diese bestimmt die Farbe einzelner Elemente des Widgets. Du legst die verfügbaren Farboptionen im Menü <<#design, Design>> fest.
@@ -2023,7 +2030,7 @@ Dieses Widget stellt eine Schaltfläche zur Verfügung, über den deine Kund:inn
 |Einstellung |Erläuterung
 
 | **CSS-Klasse**
-|Hinterlege in diesem Feld zusätzliche CSS-Klassen, um das Widget individuell zu stylen. Du kannst beliebig viele CSS-Klassen hinterlegen.
+|Speichere in diesem Feld zusätzliche CSS-Klassen, um das Widget individuell zu stylen. Du kannst beliebig viele CSS-Klassen speichern.
 
 | *Erscheinungsbild*
 |Farbgebung aus der Dropdown-Liste wählen. Diese bestimmt die Farbe der Schaltfläche, über den die Auftragsdokumente heruntergeladen werden können. Du legst die verfügbaren Farboptionen im Menü <<#design, Design>> fest.
@@ -2051,7 +2058,7 @@ Dieses Widget stellt eine Auflistung der bestellten Artikel zur Verfügung, inkl
 |Einstellung |Erläuterung
 
 | **CSS-Klasse**
-|Hinterlege in diesem Feld zusätzliche CSS-Klassen, um das Widget individuell zu stylen. Du kannst beliebig viele CSS-Klassen hinterlegen.
+|Speichere in diesem Feld zusätzliche CSS-Klassen, um das Widget individuell zu stylen. Du kannst beliebig viele CSS-Klassen speichern.
 
 | *Erscheinungsbild*
 |Farbgebung aus der Dropdown-Liste wählen. Diese bestimmt die Farbe der Artikelnamen in der Auflistung. Du legst die verfügbaren Farboptionen im Menü <<#design, Design>> fest.
@@ -2076,7 +2083,7 @@ Dieses Widget Stellt eine Auflistung der Auftragssummen zur Verfügung. Klicke a
 |Einstellung |Erläuterung
 
 | **CSS-Klasse**
-|Hinterlege in diesem Feld zusätzliche CSS-Klassen, um das Widget individuell zu stylen. Du kannst beliebig viele CSS-Klassen hinterlegen.
+|Speichere in diesem Feld zusätzliche CSS-Klassen, um das Widget individuell zu stylen. Du kannst beliebig viele CSS-Klassen speichern.
 
 | *Preisinformationen anzeigen*
 |Aktiviere alle Preisinformationen, die du in der Bestellbestätigung anzeigen willst.
@@ -2118,7 +2125,7 @@ Dieses Widget stellt die Toolbar zur Verfügung, mit der du Filter und Sortierun
 |Einstellung |Erläuterung
 
 | **CSS-Klasse**
-|Hinterlege in diesem Feld zusätzliche CSS-Klassen, um das Widget individuell zu stylen. Du kannst beliebig viele CSS-Klassen hinterlegen.
+|Speichere in diesem Feld zusätzliche CSS-Klassen, um das Widget individuell zu stylen. Du kannst beliebig viele CSS-Klassen speichern.
 
 | *Erscheinungsbild*
 |Farbgebung aus der Dropdown-Liste wählen. Diese bestimmt die Farbe des Icons und des Texts daneben. Du legst die verfügbaren Farboptionen im Menü <<#design, Design>> fest.
@@ -2150,7 +2157,7 @@ Dieses Widget stellt deinen Kund:innen die Auswahl der Artikelanzahl pro Seite z
 |Einstellung |Erläuterung
 
 | **CSS-Klasse**
-|Hinterlege in diesem Feld zusätzliche CSS-Klassen, um das Widget individuell zu stylen. Du kannst beliebig viele CSS-Klassen hinterlegen.
+|Speichere in diesem Feld zusätzliche CSS-Klassen, um das Widget individuell zu stylen. Du kannst beliebig viele CSS-Klassen speichern.
 
 | *Auswahlmöglichkeit*
 |Gib einen Wert ein. Kund:innen können diesen Wert in der Kategorieansicht auswählen. Klicke das *Plus*-Symbol, um weitere Werte hinzuzugügen. Über die Pfeile kannst du eingegebene Werte neu anordnen.
@@ -2172,7 +2179,7 @@ Dieses Widget stellt deinen Kund:innen die Auswahl der Artikelsortierung zur Ver
 |Einstellung |Erläuterung
 
 | **CSS-Klasse**
-|Hinterlege in diesem Feld zusätzliche CSS-Klassen, um das Widget individuell zu stylen. Du kannst beliebig viele CSS-Klassen hinterlegen.
+|Speichere in diesem Feld zusätzliche CSS-Klassen, um das Widget individuell zu stylen. Du kannst beliebig viele CSS-Klassen speichern.
 
 | *Sortieroptionen*
 |Aktiviere alle Werte die du deinen Kund:innen in der Auswahl zur Verfügung stellen willst. Den Wert *Empfohlen* definierst du im plentyShop -Assistenten oder über das Menü *Plugins » plentyShop  » Konfiguration » Paginierung und Sortierung* selbst.
@@ -2194,7 +2201,7 @@ Dieses Widget stellt das Artikelraster zur Auflistung deiner Artikel in der Kate
 |Einstellung |Erläuterung
 
 | **CSS-Klasse**
-|Hinterlege in diesem Feld zusätzliche CSS-Klassen, um das Widget individuell zu stylen. Du kannst beliebig viele CSS-Klassen hinterlegen.
+|Speichere in diesem Feld zusätzliche CSS-Klassen, um das Widget individuell zu stylen. Du kannst beliebig viele CSS-Klassen speichern.
 
 | *Erscheinungsbild*
 |Farbgebung aus der Dropdown-Liste wählen. Diese bestimmt die Farbe der Verlinkung auf Versandkosten. Du legst die verfügbaren Farboptionen im Menü <<#design, Design>> fest.
@@ -2228,7 +2235,7 @@ Dieses Widget stellt deinen Kund:innen die Seitennummerierung zur Verfügung, mi
 |Einstellung |Erläuterung
 
 | **CSS-Klasse**
-|Hinterlege in diesem Feld zusätzliche CSS-Klassen, um das Widget individuell zu stylen. Du kannst beliebig viele CSS-Klassen hinterlegen.
+|Speichere in diesem Feld zusätzliche CSS-Klassen, um das Widget individuell zu stylen. Du kannst beliebig viele CSS-Klassen speichern.
 
 | *Erscheinungsbild*
 |Farbgebung aus der Dropdown-Liste wählen. Diese bestimmt die Farbe der Schaltflächen. Du legst die verfügbaren Farboptionen im Menü <<#design, Design>> fest.
@@ -2265,7 +2272,7 @@ Dieses Widget stellt deinen Kund:innen eine Übersicht der gegenwärtig ausgewä
 |Einstellung |Erläuterung
 
 | **CSS-Klasse**
-|Hinterlege in diesem Feld zusätzliche CSS-Klassen, um das Widget individuell zu stylen. Du kannst beliebig viele CSS-Klassen hinterlegen.
+|Speichere in diesem Feld zusätzliche CSS-Klassen, um das Widget individuell zu stylen. Du kannst beliebig viele CSS-Klassen speichern.
 
 | *Ausrichtung*
 |Wähle zwischen linksbündig, zentriert und rechtsbündig, um die Position der ausgewählten Filter anzupassen.
@@ -2289,7 +2296,7 @@ Dir stehen 5 verschiedene Filter zur Verfügung: *Filter für Attribute, Eigensc
 |Einstellung |Erläuterung
 
 | **CSS-Klasse**
-|Hinterlege in diesem Feld zusätzliche CSS-Klassen, um das Widget individuell zu stylen. Du kannst beliebig viele CSS-Klassen hinterlegen.
+|Speichere in diesem Feld zusätzliche CSS-Klassen, um das Widget individuell zu stylen. Du kannst beliebig viele CSS-Klassen speichern.
 
 | *Erscheinungsbild*
 |Farbgebung aus der Dropdown-Liste wählen. Diese bestimmt die Farbe der Artikelanzahl rechts neben dem jeweiligen Filter. Du legst die verfügbaren Farboptionen im Menü <<#design, Design>> fest.
@@ -2325,7 +2332,7 @@ Das Cookie-Bar-Widget stellt deinen Kund:innen die Verwaltung der Cookies, die i
 |Einstellung |Erläuterung
 
 | **CSS-Klasse**
-|Hinterlege in diesem Feld zusätzliche CSS-Klassen, um das Widget individuell zu stylen. Du kannst beliebig viele CSS-Klassen hinterlegen.
+|Speichere in diesem Feld zusätzliche CSS-Klassen, um das Widget individuell zu stylen. Du kannst beliebig viele CSS-Klassen speichern.
 
 | *Erscheinungsbild*
 |Farbgebung aus der Dropdown-Liste wählen. Diese bestimmt die Farbe der Tabs im Widget. Du legst die Farboptionen im Menü <<#design, Design>> fest.
@@ -2453,7 +2460,7 @@ Das Widget Datenschutzeinstellungen stellt deinen Kund:innen eine Übersicht üb
 |Einstellung |Erläuterung
 
 | **CSS-Klasse**
-|Hinterlege in diesem Feld zusätzliche CSS-Klassen, um das Widget individuell zu stylen. Du kannst beliebig viele CSS-Klassen hinterlegen.
+|Speichere in diesem Feld zusätzliche CSS-Klassen, um das Widget individuell zu stylen. Du kannst beliebig viele CSS-Klassen speichere.
 
 | *Erscheinungsbild*
 |Farbgebung aus der Dropdown-Liste wählen. Diese bestimmt die Farbe der Tabs im Widget. Du legst die Farboptionen im Menü <<#design, Design>> fest.
