--- a/docs/de-de/modules/webshop/pages/feedbacks-verwalten.adoc
+++ b/docs/de-de/modules/webshop/pages/feedbacks-verwalten.adoc
@@ -17,7 +17,7 @@ Auch das Migrieren von bestehenden Rezensionen und das Löschen von Kundenrezens
 
 Du nimmst allgemeine Einstellungen für Bewertungen von Kund:innen im Plugin vor. 
 Öffne das Menü *Plugins » Plugin-Set-Übersicht » (Plugin-Set wählen) » Kunden-Feedback » Konfiguration*, um die Einstellungen zu öffnen.
-Beachte beim Ausführen der Einstelungen die Erläuterungen in <<tabelle-feedback-einstellungen>>.
+Beachte beim Ausführen der Einstellungen die Erläuterungen in <<tabelle-feedback-einstellungen>>.
 
 [[tabelle-feedback-einstellungen]]
 .Einstellungen im Kunden-Feedback-Plugin
