--- a/docs/de-de/modules/maerkte/pages/conrad.adoc
+++ b/docs/de-de/modules/maerkte/pages/conrad.adoc
@@ -76,6 +76,11 @@ include::partial$auftragsherkunft-aktivieren.adoc[]
 
 include::partial$verkaufspreis-festlegen.adoc[]
 
+[#volume-discount]
+=== _Optional:_ Staffelpreise festlegen
+
+include::partial$mirakl-volume-discounts.adoc[]
+
 [#eigenschaften-erstellen]
 === Eigenschaften erstellen
 
