--- a/docs/de-de/modules/maerkte/pages/mediamarkt.adoc
+++ b/docs/de-de/modules/maerkte/pages/mediamarkt.adoc
@@ -73,6 +73,11 @@ include::partial$auftragsherkunft-aktivieren.adoc[]
 
 include::partial$verkaufspreis-festlegen.adoc[]
 
+[#volume-discount]
+=== _Optional:_ Staffelpreise festlegen
+
+include::partial$mirakl-volume-discounts.adoc[]
+
 [#eigenschaften-erstellen]
 == Eigenschaften erstellen
 
