Kathrin/voelkner angebotspreis (#880)
* voelkner staffelpreise

* Update voelkner.adoc

* staffelpreise - DE

* staffelpreise mirakl

--- a/docs/de-de/modules/maerkte/pages/voelkner.adoc
+++ b/docs/de-de/modules/maerkte/pages/voelkner.adoc
@@ -77,6 +77,11 @@ include::partial$auftragsherkunft-aktivieren.adoc[]
 
 include::partial$verkaufspreis-festlegen.adoc[]
 
+[#volume-discount]
+=== _Optional:_ Staffelpreise festlegen
+
+include::partial$mirakl-volume-discounts.adoc[]
+
 [#eigenschaften-erstellen]
 == Eigenschaften erstellen
 
