CHANGE eol date for ftp server to indefinite

--- a/docs/en-gb/modules/business-decisions/pages/eol.adoc
+++ b/docs/en-gb/modules/business-decisions/pages/eol.adoc
@@ -23,10 +23,10 @@ This overview does not replace the changelog or the forum thread within a partic
 |03-May-2022
 
 |*FTP server*
-|21-Jul-2022
-|21-Jul-2022
-|link:https://forum.plentymarkets.com/t/ftp-end-of-life-announcement-21-july-2022/675956[Forum link^]
-|02-May-2022
+|indefinite
+|indefinite
+|link:https://forum.plentymarkets.com/t/ftp-end-of-life-announcement-unknown-date/675956/37[Forum link^]
+|02-June-2022
 
 | *plentymarkets logo (Start) » Boards* menu
 |13-Apr-2022
