--- a/docs/de-de/modules/artikel/pages/bilder.adoc
+++ b/docs/de-de/modules/artikel/pages/bilder.adoc
@@ -423,7 +423,8 @@ Zum Hochladen von Dateien benötigst du ein FTP-Programm und deine FTP-Zugangsda
 .FTP-Server steht nur älteren Systemen zur Verfügung
 ====
 Neue Systeme werden nicht mehr mit einem FTP-Server ausgeliefert.
-Bestandskunden können den FTP-Server noch xref:business-entscheidungen:eol.adoc[bis zum 21. Juli 2022] nutzen.
+Bestandskunden können den FTP-Server vorerst weiter nutzen.
+link:https://forum.plentymarkets.com/t/ftp-end-of-life-announcement-unknown-date/675956/37[Der EOL-Termin wurde auf unbestimmte Zeit verschoben^].
 ====
 
 [IMPORTANT]
