--- a/docs/de-de/modules/daten/pages/ftpz-zugang.adoc
+++ b/docs/de-de/modules/daten/pages/ftpz-zugang.adoc
@@ -9,7 +9,8 @@ Um Bilder, PDF-Dokumente und andere Dateien für Besucher deines Online-Shops ve
 .FTP-Server steht nur älteren Systemen zur Verfügung
 ====
 Neue Systeme werden nicht mehr mit einem FTP-Server ausgeliefert.
-Bestandskunden den FTP-Server noch xref:business-entscheidungen:eol.adoc[bis zum 21. Juli 2022] nutzen.
+Bestandskunden können den FTP-Server vorerst weiter nutzen.
+link:https://forum.plentymarkets.com/t/ftp-end-of-life-announcement-unknown-date/675956/37[Der EOL-Termin wurde auf unbestimmte Zeit verschoben^].
 ====
 
 [IMPORTANT]
