--- a/docs/en-gb/modules/data/pages/ftp-access.adoc
+++ b/docs/en-gb/modules/data/pages/ftp-access.adoc
@@ -9,7 +9,8 @@ To make images, PDF files and other files accessible in your online store, these
 .FTP server is only available for older systems
 ====
 New systems are no longer equipped with an FTP server.
-Existing customers can continue to use the FTP server xref:business-decisions:eol.adoc[until 21 July 2022].
+Existing customers can continue using the FTP server for now.
+link:https://forum.plentymarkets.com/t/ftp-end-of-life-announcement-unknown-date/675956/37[The EOL date has been postponed indefinitely^].
 ====
 
 [IMPORTANT]
