Added new option for failed refunds

--- a/docs/de-de/modules/maerkte/pages/ebay-einrichten.adoc
+++ b/docs/de-de/modules/maerkte/pages/ebay-einrichten.adoc
@@ -263,6 +263,11 @@ a| Wählen, ob <<Retouren abwickeln, eBay-Retouren>> abgerufen werden sollen. +
 | *Automatische Zahlungsbuchung in Gutschrift bei Rückerstattung*
 | Wählen, ob bei der erfolgreichen Rückerstattung eines eBay-Payments-Auftrags bei einem Auftrag des Typs *Gutschrift* eine Zahlung gebucht werden soll.
 
+| *Auftragsstatus für Aufträge mit fehlgeschlagener Rückerstattung*
+| In welchen Status sollen Aufträge verschoben werden, für die keine Rückerstattung durchgeführt werden konnte? Erstelle bei Bedarf einen xref:auftraege:auftraege-verwalten.adoc#1230[neuen Status]. +
+
+*_Hintergrund:_* Mit der Ereignisaktion <<#8300, eBay-Rückerstattung veranlassen>> veranlasst du eine Rückerstattung für einen Auftrag. Mit der Einstellung *Auftragsstatus für Aufträge mit fehlgeschlagener Rückerstattung* legst du fest, in welchen Status Aufträge geschoben werden sollen, wenn diese Ereignisaktion nicht ausgeführt werden konnte.
+
 | *eBay Plus für neue Listings automatisch aktivieren*
 | Wählen, ob alle neuen Listings automatisch zum eBay Plus-Treueprogramm gehören. Listings können im Nachhinein bearbeitet und die Einstellung deaktiviert werden.
 
