--- a/docs/en-gb/modules/markets/pages/ebay-setup.adoc
+++ b/docs/en-gb/modules/markets/pages/ebay-setup.adoc
@@ -263,6 +263,11 @@ a| Select whether <<Processing returns, eBay returns>> should be retrieved or no
 | *Automatically book payment in credit note at refund process*
 | Select whether an incoming payment is booked for orders of the type *credit note* when an eBay Payments order is successfully refunded.
 
+| *Order status for orders with failed refunds*
+| Select a status. If no refund could be issued, then the order is moved to this status. If necessary, create a xref:orders:managing-orders.adoc#1230[new status]. +
+
+*_Background:_* The event procedure <<#8300, Issue eBay refund to customer>> initiates a refund for an order. If the event procedure cannot be completed, the order is moved to the status that you selected for the setting *Order status for orders with failed refunds*.
+
 | *Automatically activate eBay Plus for new listings*
 | Select whether the loyalty programme eBay Plus should be activated for all new listings automatically. Listings can be edited afterwards and the setting can be deactivated.
 
