--- a/docs/en-gb/modules/markets/pages/zalando.adoc
+++ b/docs/en-gb/modules/markets/pages/zalando.adoc
@@ -403,6 +403,39 @@ Define up to three scheduled prices. Scheduled prices ensure that Zalando really
 --
 
 [.collapseBox]
+.Step *Zalando Fulfillment Solutions (ZFS)*
+--
+
+[[assistant-zalando-zfs]]
+[cols="1,3a"]
+|===
+|Setting |Explanation
+
+| *Do you want to use Zalando Fulfillment Solutions?*
+a| Zalando Fulfillment Solutions is a service in which Zalando ships the orders to your customers. You send your items to Zalando and Zalando takes care of the storage and the shipment to your customers. +
+
+Activate the toggle button to use Zalando Fulfillment Solutions. +
+
+*_Note:_* You need to have a contract for Zalando Fulfillment Solutions in order to use this service.
+
+| *Assign warehouses*
+a| Here you assign plentymarkets warehouses to the different Zalando locations (countries). There is a Zalando Fulfillment warehouse your items can be stored in in each country that you can select here. Hence, you assign plentymarkets warehouses to the Zalando warehouses. This provides an overview of the Zalando locations your items are stored in. The stock from the Zalando locations is transferred to your plentymarkets warehouses. +
+
+First select the plentymarkets warehouse that stock from Zalando should be transferred to by default. +
+
+Below, you can assign plentymarkets warehouses to the different Zalando locations (countries). +
+
+*_Example:_* For example, you can create the plentymarkets warehouse *Zalando UK* and assign the Zalando location *UK* to have an overview of the items which are stored in UK. +
+
+Click on (material:add[]) to assign further warehouses. +
+
+If you do not assign any other warehouses, the stock from all Zalando locations will be transferred to the default warehouse selected above. +
+
+*_Note:_* You can only assign _one_ plentymarkets warehouse to each Zalando location.
+|===
+--
+
+[.collapseBox]
 .Step *Account activation*
 --
 *Would you like to activate your Zalando account now?*
