--- a/docs/de-de/modules/business-entscheidungen/partials/warenausgangsdatum.adoc
+++ b/docs/de-de/modules/business-entscheidungen/partials/warenausgangsdatum.adoc
@@ -1,1 +1,3 @@
+=== Warenausgangsdatum
+
 Filtert die ausgewählte Kennzahl und Dimension zusätzlich nach dem Datum, an dem der xref:warenwirtschaft:waren-ausbuchen.adoc#[Warenausgang] gebucht wurde. Wähle einen der folgenden Vergleichsoperatoren und lege anschließend rechts das gewünschte Datum oder einen Zeitraum fest.
