mirakl staffelpreise - EN

--- a/docs/en-gb/modules/markets/pages/conrad.adoc
+++ b/docs/en-gb/modules/markets/pages/conrad.adoc
@@ -76,6 +76,11 @@ include::partial$activate-referrer.adoc[]
 
 include::partial$define-sales-price.adoc[]
 
+[#volume-discount]
+=== _Optional:_ Defining graduated prices
+
+include::partial$mirakl-volume-discounts.adoc[]
+
 [#create-properties]
 === Creating properties
 
