ADD more work to the new item ui pages

--- a/docs/de-de/modules/artikel/pages/detailansicht.adoc
+++ b/docs/de-de/modules/artikel/pages/detailansicht.adoc
@@ -136,7 +136,7 @@ Es ist möglich, das Design eines ganzen Elements anzupassen oder das Design ein
 
 Du hast folgende Anpassungsmöglichkeiten auf der Element-Ebene:
 
-//gif
+image::artikel:gestaltung-ebene-element.gif[]
 
 [cols="1,4a"]
 |===
@@ -167,7 +167,7 @@ Wähle diese Option, wenn du Fließtext hinzufügen möchtest.
 
 Du hast folgende Anpassungsmöglichkeiten auf der Datenfeld-Ebene:
 
-//gif
+image::artikel:gestaltung-ebene-datenfeld.gif[]
 
 [cols="1,4a"]
 |===
@@ -292,6 +292,8 @@ Eine mögliche Anwendung ist, jeden Eigenschaftstyp als ein eigenes Portlet darz
 
 include::page$verzeichnis.adoc[tag=properties-type-portlet]
 
+////
+
 === Texte
 
 //fast den gleichen Einleitungstext findet sich auch in die Datei verzeichnis - da bei den Text Element
@@ -302,6 +304,8 @@ Beispielsweise könntest du eine einsprachige Ansicht erstellen.
 Oder du könntest andere Sprachen wählen und somit eine individuelle Übersetzungsansicht einrichten.
 
 include::page$verzeichnis.adoc[tag=texts-multilingual-panel]
+
+////
 
 [#1000]
 == Speicherlogik
